--- a/react-course-ts/package.json
+++ b/react-course-ts/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "sass": "^1.58.3",
+    "styled-components": "^5.3.8",
     "typescript": "^4.9.5",
     "usehooks-ts": "^2.9.1",
     "web-vitals": "^2.1.4"
@@ -43,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.26"
   }
 }
