--- a/react-course-ts/package.json
+++ b/react-course-ts/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router": "^6.9.0",
+    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "sass": "^1.58.3",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-bootstrap": "^0.26.0",
     "@types/styled-components": "^5.1.26"
   }
 }
