--- a/react-course-ts/package.json
+++ b/react-course-ts/package.json
@@ -10,11 +10,14 @@
     "@types/node": "^16.18.14",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-infinite-scroller": "^1.2.6",
+    "react-paginate": "^8.1.4",
     "react-router": "^6.9.0",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.9.0",
@@ -50,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-infinite-scroller": "^1.2.3",
     "@types/react-router-bootstrap": "^0.26.0",
     "@types/styled-components": "^5.1.26"
   }
