--- a/react-course-ts/package.json
+++ b/react-course-ts/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +19,7 @@
     "react-icons": "^4.8.0",
     "react-infinite-scroller": "^1.2.6",
     "react-paginate": "^8.1.4",
+    "react-redux": "^8.0.5",
     "react-router": "^6.9.0",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.9.0",
