--- a/react-course-ts/package.json
+++ b/react-course-ts/package.json
@@ -20,6 +20,7 @@
     "react-infinite-scroller": "^1.2.6",
     "react-paginate": "^8.1.4",
     "react-redux": "^8.0.5",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.9.0",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.9.0",
